Add print functions with mutex

--- a/philo/todo
+++ b/philo/todo
@@ -1,3 +1,5 @@
 first odd and then even philos (best for no philo to die)
 	dying: have a monitoring function to check if time_now > last_time_eat
 PROTECT PRINTF's
+
+Handle optional argument
